--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 </head>
 
 <body>
-    <!--Header-->
-    <header>Header</header>
+    <!--Header-->    
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+    </header>
 
     <!--Main Content-->
     <main>Main content</main>
