--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="">Sign-Up</a></li>
             </ul>
         </nav>
+    </header>
 
     <!--Main Content-->
     <main>Main content</main>
