--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Gallery</a></li>
-                <li><a href="">Sign-Up</a></li>
+                <li><a href="">Sign Up</a></li>
             </ul>
         </nav>
     </header>
