--- a/signup.html
+++ b/signup.html
@@ -25,9 +25,9 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="" class="active">Home</a></li>
+                <li><a href="">Home</a></li>
                 <li><a href="">Gallery</a></li>
-                <li><a href="">Signup</a></li>
+                <li><a href=""class="active">Signup</a></li>
             </ul>
         </nav>
     </header>
