--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--meta tags for search engines-->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <title>Love-running</title>
     <!--favicon-->
@@ -16,7 +17,7 @@
 </head>
 
 <body>
-    <!--Header-->    
+    <!--Header-->
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
@@ -34,9 +35,10 @@
 
     <!--Main Content-->
     <main>
-        <section id="hero"></section> 
+        <section id="hero"></section>
     </main>
 
+    
     <!--Footer-->
     <footer>
         <ul id="social-networks">
