--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                     </div>
                 </div>
             </div>
+            <div id="benefits-image">
+                <div id="circle-cover-bg"></div>
+            </div>
         </section> 
     </main>
 
